<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="vnzla.jonasleon8.controltest.MainActivity">


    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorLetrasLogin"
        android:id="@+id/tvEmail"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="5dp"
        />

    <Button
        android:text="@string/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEnter"
        android:layout_marginLeft="25dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="370dp" />

    <Switch
        android:text="@string/guardar_usuario"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchRemember"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonEnter"
        />
    />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="20dp"
        android:id="@+id/tvPassword"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="Password"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tvPassword"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonReg"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:onClick="onClick"
        />




</RelativeLayout>
