<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/wallpaperregistro2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="vnzla.jonasleon8.controltest.RegActivity">

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorLetrasLogin"
        android:id="@+id/nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:ems="10"
        android:id="@+id/editTextNombre"
        android:hint="Nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:text="@string/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorLetrasLogin"
        android:id="@+id/apellido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:ems="10"
        android:id="@+id/editTextApellido"
        android:hint="Apellido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"/>

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorLetrasLogin"
        android:id="@+id/Username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>


    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="20dp"
        android:id="@+id/Clave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp" />

    <Button
        android:text="@string/registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegistrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        />

</RelativeLayout>