<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_query"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/wallpaper3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="vnzla.jonasleon8.controltest.QueryActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/desktop"
        android:id="@+id/computadora"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/botonConsulta2"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="Pc Jonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="30dp"
        android:id="@+id/pcJonas"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/estado"
        android:id="@+id/botonConsulta2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pcJonas"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/voltaje"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="25sp"
        android:id="@+id/voltaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/computadora"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valorV"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/voltaje"
        android:textColor="@color/iniciocolor"
        android:textStyle="bold"

        />

    <TextView
        android:text="@string/temperatura"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="25sp"
        android:id="@+id/temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valorV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/voltaje"
        android:textSize="22sp"
        android:id="@+id/valorT"
        android:layout_below="@+id/temperatura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/estado"
        android:textColor="@color/colorLetrasLogin"
        android:textSize="25sp"
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/valorT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLetrasLogin"
        android:text="ON"
        android:textSize="22sp"
        android:layout_below="@id/estado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />


</RelativeLayout>